@@ -30,7 +30,6 @@ Host: 127.0.0.1:%HTTPPORT
 Accept: */*
 Content-Length: 1
 Content-Type: application/x-www-form-urlencoded
-Expect: 100-continue
 
 </protocol>
 # 42 - aborted by callback
