@@ -40,7 +40,6 @@ Host: 127.0.0.1:%HTTPPORT
 Accept: */*
 Content-Length: 0
 Content-Type: application/x-www-form-urlencoded
-Expect: 100-continue
 
 </protocol>
 </verify>
